langtools/test/tools/javac/proprietary/WarnVariable.out
WarnVariable.java:15:36: compiler.warn.sun.proprietary: sun.misc.FloatConsts
- compiler.err.warnings.and.werror
1 error
1 warning
